// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cover Form Store: Initial State 1`] = `
Object {
  "loading": Object {},
}
`;

exports[`Cover Form Store: one thing loading 1`] = `
Object {
  "loading": Object {
    "lplp": true,
  },
}
`;

exports[`Cover Form Store: two things loading 1`] = `
Object {
  "loading": Object {
    "lp": true,
    "lplp": true,
  },
}
`;
